<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.kalynx</groupId>
    <artifactId>UITestFramework</artifactId>
    <version>0.1</version>
    <packaging>jar</packaging>
    <properties>
            <junit.jupiter.version>5.9.1</junit.jupiter.version>
            <junit.platform.version>1.9.1</junit.platform.version>
    </properties>
    <dependencies>
        <!-- temporary dependency until jrobotremoteserver has correct issues in their latest library  -->
        <dependency>
            <groupId>org.robotframework</groupId>
            <artifactId>jrobotremoteserver</artifactId>
            <version>4.1.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/jrobotremoteserver-4.1.2-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-servlet</artifactId>
            <version>11.0.3</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-jcl</artifactId>
            <version>2.17.2</version>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>com.evolvedbinary.thirdparty.org.apache.xmlrpc</groupId>
            <artifactId>xmlrpc-server</artifactId>
            <version>5.0.0</version>
        </dependency>
        <dependency>
            <groupId>xmlrpc</groupId>
            <artifactId>xmlrpc-client</artifactId>
            <version>3.0</version>
            <scope>test</scope>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.robotframework</groupId>-->
<!--            <artifactId>jrobotremoteserver</artifactId>-->
<!--            <version>4.1.1</version>-->
<!--        </dependency>-->
        <!-- provides AnnotationLibrary (easy to create a dynamic API library) -->
        <dependency>
            <groupId>org.robotframework</groupId>
            <artifactId>javalib-core</artifactId>
            <version>2.0.3</version>
        </dependency>

        <!-- Simple managed threading service -->
        <dependency>
            <groupId>com.kalynx</groupId>
            <artifactId>simplethreadingservice</artifactId>
            <version>0.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.14.0</version>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>5.6.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>

        <!-- pre-built/ready to go opencv library -->
        <dependency>
            <groupId>org.openpnp</groupId>
            <artifactId>opencv</artifactId>
            <version>4.7.0-0</version>
        </dependency>

        <!-- used to generate the library documentation -->
        <dependency>
            <groupId>org.robotframework</groupId>
            <artifactId>robotframework</artifactId>
            <version>4.1.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Simple Dependency Injection Framework -->
        <dependency>
            <groupId>com.kalynx</groupId>
            <artifactId>lwdi</artifactId>
            <version>1.0</version>
        </dependency>
        <!-- Unit Test dependencies -->
        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.5.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
